# researchers

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  MCP_ARCHITECTURE.md  Makefile  ONBOARDING.md  README.md  package.json  todos.jsonl  vercel.json  vitest.jade.config.ts
claude-code/: .gitignore  .lsp.json  BLOOM_PR_QUEUE.md  BLOOM_TOOLS_ARCHITECTURE.md  BLOOM_TOOLS_ARCHITECTURE_AGENT.md  pyproject.toml  run_ab_experiment.py  run_local_crawl.py  scrapy.cfg
claude-code-actions/: .gitlab-ci.yml  pyproject.toml
claude-code-actions/.claude/: CLAUDE.md
claude-code-actions/.claude/agents/: chrome-crawler.md  ci-spider-improver.md  cross-platform-deployer.md  multi-lang-validator.md
claude-code-actions/.github/workflows/: claude-code-ci.yml  claude-code-security.yml  improvement-cycle.yml  lsp-integration-test.yml  multi-lang-ci.yml  plugin-publish.yml  pr-spider-review.yml  quality-report.yml  scheduled-crawl.yml
claude-code-actions/chrome/: extract_with_chrome.py  form_automation.py
claude-code-actions/integrations/: linear_sync.py  notion_publisher.py  slack_reporter.py
claude-code-actions/lsp_setup/: install_all_lsp.sh  verify_lsp.py
claude-code-actions/lsp_setup/lsp_configs/: clangd.json  csharp-ls.json  gopls.json  intelephense.json  jdtls.json  kotlin-ls.json  lua-ls.json  pyright.json  rust-analyzer.json  sourcekit-lsp.json  typescript.json
claude-code-actions/scripts/: check-quality.py  generate-report.py  run-crawl.sh
claude-code-agents-python/: pyproject.toml  run_video_ai_crawl.py
claude-code-agents-python/.claude/: CLAUDE.md
claude-code-agents-python/.claude/agents/: codegen-assistant.md  cowork-assistant.md  crawl-campaign-manager.md
claude-code-agents-python/data/: video_ai_crawl_results.json
claude-code-agents-python/generated_plugins/agents/: plugin-generator.md  quality-analyst.md  schema-discoverer.md
claude-code-agents-python/generated_plugins/skills/: analyze-quality.md  claude-api.md  cowork-task.md  run-campaign.md
claude-code-agents-python/sdk_examples/: csharp_example.cs  go_example.go  java_example.java  php_example.php  python_example.py  ruby_example.rb  typescript_example.ts
claude-code-agents-python/src/: cli.py
claude-code-agents-python/src/bloom/: __init__.py
claude-code-agents-python/src/codegen/: __init__.py  language_router.py  multi_lang_scaffold.py  template_engine.py
claude-code-agents-python/src/cowork/: __init__.py  knowledge_synthesizer.py  plugin_recommender.py  task_router.py
claude-code-agents-python/src/dspy_pipeline/: __init__.py  bloom_router.py  crawl_adapter.py  modules.py  pipeline.py  signatures.py
claude-code-agents-python/src/models/: __init__.py  crawl_target.py  extraction_result.py  improvement.py  language.py  plugin_spec.py
claude-code-agents-python/src/orchestrator/: __init__.py  campaign.py  context_injector.py  headless_runner.py  improvement_chain.py
claude-code-agents-python/src/plugin_gen/: __init__.py  agent_writer.py  connectors_writer.py  hooks_writer.py  lsp_config.py  manifest.py  mcp_config.py  scaffold.py  skill_writer.py
claude-code-agents-python/tests/: test_campaign.py  test_codegen.py  test_cowork.py  test_dspy_pipeline.py  test_improvement_chain.py  test_plugin_gen.py
claude-code-security-review/: .gitignore  pyproject.toml
claude-code-security-review/.claude/: CLAUDE.md  settings.json
claude-code-security-review/.claude/agents/: data-leak-scanner.md  multi-lang-security.md  pipeline-auditor.md  plugin-auditor.md  spider-security-reviewer.md
claude-code-security-review/.claude/hooks/: validate-url.sh
claude-code-security-review/rules/: pii_patterns.yaml  plugin_safety_rules.yaml  security_policies.yaml  url_allowlist.yaml
claude-code-security-review/scanners/: plugin_scanner.py
claude-code-security-review/scanners/go/: go.mod
claude-code/.claude/: CLAUDE.md  settings.json
claude-code/data/: benchmark_python.json  llms-txt-video-competitors.md
claude-code/extractors_cpp/: CMakeLists.txt
claude-code/extractors_csharp/: Extractors.csproj  HtmlExtractor.cs  QualityScorer.cs
claude-code/extractors_go/: go.mod
claude-code/extractors_java/: pom.xml
claude-code/extractors_kotlin/: build.gradle.kts
claude-code/extractors_lua/: extractor.lua
claude-code/extractors_php/: composer.json
claude-code/extractors_ruby/: Gemfile
claude-code/extractors_rust/: Cargo.toml
claude-code/extractors_swift/: Package.swift
claude-code/extractors_ts/: package.json  tsconfig.json
claude-code/improvements/: docs_spider_20260327_012059.jsonl  docs_spider_20260327_012923.jsonl  github_spider_20260327_033508.jsonl  github_spider_20260327_034040.jsonl  github_spider_20260327_034312.jsonl  github_spider_20260327_035154.jsonl  llms_full_spider_20260327_015529.jsonl  llms_full_spider_20260327_015554.jsonl  llms_full_spider_20260327_023050.jsonl  llms_full_spider_20260327_023051.jsonl  llms_full_spider_20260327_023052.jsonl  platform_spider_20260327_012956.jsonl  platform_spider_20260327_014425.jsonl  releasebot_spider_20260328_045606.jsonl  round6_pattern_findings.jsonl
claude-code/scrapy_researchers/: bloom_dupefilter.py  bloom_eval.py  bloom_filter.py  bloom_tool_analysis.py  items.py  middlewares.py  pipelines.py  settings.py  throttle_conservative.py
claude-code/test_fixtures/: customers.html  sitemap-products.xml
claude-code/tests/: test_bloom_filter.py
claude-multi-agent-dispatch/: .lsp.json  .mcp.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
claude-multi-agent-dispatch/.claude/: CLAUDE.md
claude-multi-agent-dispatch/__tests__/: audit.test.ts  crawl-orchestrator.test.ts  crawl-store-bloom.test.ts  cursor.test.ts  dispatch.test.ts  eval-orchestrator.test.ts  experiments.test.ts  heartbeat.test.ts  jade-models.test.ts  logging.test.ts  orchestrator.test.ts  pipeline.test.ts  quality.test.ts  refinement.test.ts  rounds.test.ts  safety.test.ts  team-orchestrator.test.ts  thinking.test.ts  transitions.test.ts  types.test.ts
claude-multi-agent-dispatch/src/: index.ts
(+638 files in other folders)
