[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scrapy-researchers"
version = "0.1.0"
description = "Iterative Scrapy crawler system with multi-language extractors for documentation research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Researchers Team"},
]

dependencies = [
    "scrapy>=2.11",
    "beautifulsoup4",
    "markdownify",
    "pydantic>=2.0",
    "lxml",
    "w3lib",
    "scrapy-deltafetch",
    "scrapy-magicfields",
    "itemadapter",
    "spidermon",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["scrapy_researchers*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
