[package]
name = "extractors-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance HTML extraction and quality scoring"

[dependencies]
scraper = "0.20"
html5ever = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "extract"
path = "src/bin/extract.rs"
